Se agregan servicios

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,14 @@
     <li><button  (click)="openContacto(Contacto)">Contacto</button></li>
   </ul> 
 </header>-->
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 
-<!-- <div class="marcaAgua"> -->
 
-  <section id="content">
+
+  <!-- <section id="content"> -->
     <router-outlet></router-outlet>
     
-    </section>
+    <!-- </section> -->
 
 <!-- </div> -->
 
@@ -25,13 +25,7 @@
 
 
 
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
 <!-- <footer>
   Fonelli&copy;
 </footer> -->
-
-
-
-
-
-
