--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -1,1 +1,81 @@
-<p>consultapedidos works!</p>
+<section >
+    <div class="row">
+       <div class="col-lg-6">
+ 
+         <div class="card">
+           <div class="card-body">
+             <h2 class="card-title" >Consulta de Pedidos</h2>
+ 
+             <!-- General Form Elements -->
+             <form>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Numero</label>
+                      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Filial</label>
+                      <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                    </div>
+
+
+                    
+                </div>
+
+                <div class="row">
+                   
+                    <div class="col-sm-9">
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1"> First radio </label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2"> Second radio </label>
+                      </div>
+                      <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                        <label class="form-check-label" for="gridRadios3"> Third disabled radio </label>
+                      </div>
+                    </div>
+                  </div>
+
+             
+
+                
+                <br>   
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">BUSCAR</button>
+                    </div>
+                </div>            
+
+
+              
+ 
+               
+             </form><!-- End General Form Elements -->
+ 
+           </div>
+           <hr class="my-1" />
+ 
+       
+ 
+   
+ 
+ 
+ 
+ 
+ 
+ 
+         </div>
+ 
+       </div>
+ 
+ 
+     </div>
+   </section>
