--- a/src/app/components/consultaprecios/consultaprecios.component.html
+++ b/src/app/components/consultaprecios/consultaprecios.component.html
@@ -1,1 +1,97 @@
-<p>consultaprecios works!</p>
+<section >
+    <div class="row">
+       <div class="col-lg-6">
+ 
+         <div class="card">
+           <div class="card-body">
+             <h2 class="card-title" >Consulta de precios</h2>
+ 
+             <!-- General Form Elements -->
+             <form>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Numero</label>
+                      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Filial</label>
+                      <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                    </div>
+
+
+                    
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">No de lista</label>
+                      <select class="form-select" aria-label="Default select example">
+                        <option value="1">Lista 1</option>
+                        <option value="2">Lista 2</option>
+                        
+                      </select>
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">-</label>
+                      <input type="text" class="form-control" id="" placeholder="">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Tipo de paridad</label>
+                      <select class="form-select" aria-label="Default select example">
+                        <option value="1">Normal</option>
+                        <option value="2">Especial</option>
+                        
+                      </select>
+                    </div>
+                  
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Linea</label>
+                      <input type="email" class="form-control" id="inputEmail4" placeholder="No de lista ">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Clave</label>
+                      <input type="text" class="form-control" id="" placeholder="">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">BUSCAR</button>
+                    </div>
+                </div>            
+
+
+              
+ 
+               
+             </form><!-- End General Form Elements -->
+ 
+           </div>
+           <hr class="my-1" />
+ 
+       
+ 
+   
+ 
+ 
+ 
+ 
+ 
+ 
+         </div>
+ 
+       </div>
+ 
+ 
+     </div>
+   </section>
