--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,10 +1,10 @@
 
-<!-- <div class="marcaAgua"> -->
-
-<ngb-carousel >
+  <app-header></app-header>
+  
+  <ngb-carousel >
     <ng-template ngbSlide>
       <div class="picsum-img-wrapper">
-        <img src="../assets/images/img_1.jpg" alt="Random first slide">
+        <img src="../assets/images/1.jpg" alt="Random first slide">
       </div>
       <div class="carousel-caption">
         <h3>10 seconds between slides...</h3>
@@ -50,7 +50,7 @@
            
               <div class="col-12 col-lg-4 border-right border-primary ">
                 <p>Mas de 8000</p>
-                  <div class="news-thumb" data-aos="fade-up">
+                  <div class="news-thumb">
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
                       </a>  
@@ -62,7 +62,7 @@
               
               <div class="col-12 col-lg-4 border-right border-primary ">
                 <p>600 distribuidores</p>
-                  <div class="news-thumb" data-aos="fade-up">
+                  <div class="news-thumb" >
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
                       </a>                                                               
@@ -72,7 +72,7 @@
   
               <div class="col-12 col-lg-4 ">
                 <p>Presencia en más de</p>
-                  <div class="news-thumb" data-aos="fade-up">
+                  <div class="news-thumb" >
                       
                       <a href="news-detail.html" class="news-image-hover news-image-hover-warning">
                           <img src="../../../assets/images/principal/carrucel/dije.JPG" class="img-fluid large-news-image news-image" alt="">
@@ -89,11 +89,11 @@
       <div class="container mb-5 pb-lg-5">
           <div class="row">
               <div class="col-12">
-                  <h2 class="mb-3" data-aos="fade-up" >NOSOTROS</h2>
+                  <h2 class="mb-3"  >NOSOTROS</h2>
               </div>
   
               <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-                  <p class="me-4" data-aos="fade-up" data-aos-delay="300">Desde su fundación en 1985 hasta el dia de hoy hemos tenido una sola pasión, y es el satisfacer a nuestros clientes fabricando piezas buscando la perfección hasta el más mínimo detalle para poder <strong>convertir metales preciosos en obas de arte que plasmen la historia detras de cada pieza.</strong> 
+                  <p class="me-4"  data-aos-delay="300">Desde su fundación en 1985 hasta el dia de hoy hemos tenido una sola pasión, y es el satisfacer a nuestros clientes fabricando piezas buscando la perfección hasta el más mínimo detalle para poder <strong>convertir metales preciosos en obas de arte que plasmen la historia detras de cada pieza.</strong> 
                       <br><br> Cada uno de nuestros colaboradores con más de 20 años laborando con nosotros son parte esencial de este proceso, y aque <strong> gracias a ellos surge la magia de poder materializar una historia, una emoción, un sentimiento y un anhelo.</strong> La magia empieza desde realizar un boceto del diseño de la joya hasta llevarla al área de lavado para dejarla perfecta y brillante.                    
                       <br><br>Todo lo que hacemos, lo hacemos con <strong> pasión y delicadeza para poder entregar una joya impecable.</strong>
                       <br><br>Nuestros modelos no solo son para bodas, también <strong> se realizan diseños pensados para cada ocasión.</strong> ya sea como un regalo de cumpleaños, dia de las madres, aniversarios, día del padre, graduaciones, inclusive como un auto regalo.
@@ -153,3 +153,6 @@
 
 
 <!-- </div> -->
+
+
+<app-footer></app-footer>
