--- a/src/app/components/relacionpedidos/relacionpedidos.component.html
+++ b/src/app/components/relacionpedidos/relacionpedidos.component.html
@@ -1,1 +1,184 @@
-<p>relacionpedidos works!</p>
+<section >
+    <div class="row">
+       <div class="col-lg-6">
+ 
+         <div class="card">
+           <div class="card-body">
+             <h2 class="card-title" >Relación de Pedidos</h2>
+ 
+             <!-- General Form Elements -->
+             <form>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Desde oficina</label>
+                      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Hasta oficina</label>
+                      <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">CATALOGO DE CLIENTES</button>
+                    </div>                    
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-3">
+                      <label for="inputCity">Desde cliente</label>
+                      <input type="text" class="form-control" id="inputCity5" placeholder="0">
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputState">Hasta oficina</label>
+                      <input type="text" class="form-control" id="inputCity5" placeholder="0">
+                    </div>
+                    <div class="form-group col-md-3">
+                      <label for="inputZip">Hasta cliente</label>
+                      <input type="text" class="form-control" id="inputZip5" placeholder="999999">
+                    </div>
+                    <div class="form-group col-md-3">
+                        <label for="inputZip">Filial</label>
+                        <input type="text" class="form-control" id="inputZip5" placeholder="999">
+                      </div>
+                  </div>
+
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Desde fecha pedido</label>
+                      <div class="input-group">
+                        <input type="text" class="form-control drgpicker" id="date-input1" value="04/24/2020" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <div class="input-group-text" id="button-addon-date"><span class="fe fe-calendar fe-16"></span></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Hasta fecha pedido</label>
+                      <div class="input-group">
+                        <input type="text" class="form-control drgpicker" id="date-input1" value="04/24/2020" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <div class="input-group-text" id="button-addon-date"><span class="fe fe-calendar fe-16"></span></div>
+                        </div>
+                      </div>
+                    </div>                                     
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputEmail4">Desde fecha cancelacion operacion</label>
+                      <div class="input-group">
+                        <input type="text" class="form-control drgpicker" id="date-input1" value="04/24/2020" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <div class="input-group-text" id="button-addon-date"><span class="fe fe-calendar fe-16"></span></div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="form-group col-md-6">
+                      <label for="inputPassword4">Hasta fecha cancelacion operacion</label>
+                      <div class="input-group">
+                        <input type="text" class="form-control drgpicker" id="date-input1" value="04/24/2020" aria-describedby="button-addon2">
+                        <div class="input-group-append">
+                          <div class="input-group-text" id="button-addon-date"><span class="fe fe-calendar fe-16"></span></div>
+                        </div>
+                      </div>
+                    </div>                                     
+                </div>
+
+
+                <div class="row">
+                   
+                    <div class="form-group col-md-3">
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1"> Activos</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2">Inactivos</label>
+                      </div>
+                      <div class="form-check disabled">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                        <label class="form-check-label" for="gridRadios3"> Todos </label>
+                      </div>
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                          <label class="form-check-label" for="gridRadios1"> Pedidos</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                          <label class="form-check-label" for="gridRadios2"> Servicio </label>
+                        </div>
+                        <div class="form-check disabled">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                          <label class="form-check-label" for="gridRadios3"> Todos </label>
+                        </div>
+                      </div>
+
+                      <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                          <label class="form-check-label" for="gridRadios1"> Internos </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                          <label class="form-check-label" for="gridRadios2"> Externos </label>
+                        </div>
+                        <div class="form-check disabled">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" disabled>
+                          <label class="form-check-label" for="gridRadios3"> Todos </label>
+                        </div>
+                      </div>
+
+                      <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                          <label class="form-check-label" for="gridRadios1"> Solo atrasados </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                          <label class="form-check-label" for="gridRadios2"> Todos </label>
+                        </div>
+                        
+                      </div>
+
+                    
+                  </div>
+
+             
+
+                
+                <br>   
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">BUSCAR</button>
+                    </div>
+                </div>            
+
+
+              
+ 
+               
+             </form><!-- End General Form Elements -->
+ 
+           </div>
+           <hr class="my-1" />
+ 
+       
+ 
+   
+ 
+ 
+ 
+ 
+ 
+ 
+         </div>
+ 
+       </div>
+ 
+ 
+     </div>
+   </section>
