--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 
     <section class="hero" id="hero">
         <div class="heroText">
-            <h1 class="col-lg-3 text-white mt-5 mb-lg-4"  data-aos-delay="800">
+            <h1 class="col-lg-3 text-white mt-5 mb-lg-4" data-aos="fade-up"  data-aos-delay="800">
                 Fonelli
             </h1>
     
@@ -11,8 +11,8 @@
         </div>
     
         <div class="videoWrapper">
-            <video autoplay="" loop="" muted="" class="custom-video">
-                <source src="../../../assets/videos/Página Fonelli.mp4" type="video/mp4">
+            <video video loop muted autoplay oncanplay="this.play()" onloadedmetadata="this.muted = true" class="custom-video">
+                <source src="../../../assets/videos/PaginaFonelli.mp4" type="video/mp4">
     
                 Your browser does not support the video tag.
             </video>
@@ -44,7 +44,7 @@
 
                     <li class="nav-item">
                         <!--<a class="nav-link" href="#about">Our Studio</a>-->
-                        <a class="nav-link" href ="https://fonelli.com/">Tienda en linea</a>
+                        <a class="nav-link" href ="https://fonelli.com/" target="_blank">Tienda en linea</a>
                         
                     </li>
 
