--- a/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
+++ b/src/app/components/ventasclientearticulo/ventasclientearticulo.component.html
@@ -1,1 +1,212 @@
-<p>ventasclientearticulo works!</p>
+
+<div class="example-container" [class.example-is-mobile]="mobileQuery.matches" *ngIf="shouldRun">
+    <mat-toolbar >
+      <button class="btn btn-primary" (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+      <div class="cat ">
+        <a href="#">
+          <img  src="../../../assets/images/principal/logo_fonelli.png"  >
+        </a>      
+      </div>
+      <button (click)="EliminaSesion()" class="btn btn-primary btn-sm ml-auto">Cerrar Sesión</button>
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="example-sidenav-container"
+                           [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+      <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
+                   [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
+        <mat-nav-list>
+        
+          <a mat-list-item routerLink=".">Inicio</a>
+          <a mat-list-item [routerLink]="['/distribuidores/datoscliente/']">Datos generales de Clientes</a>
+          <a mat-list-item [routerLink]="['/distribuidores/consultaprecios/']">Consulta de Precios</a>
+          <a mat-list-item [routerLink]="['/distribuidores/consultapedidos/']">Consulta de Pedidos</a>
+          <a mat-list-item [routerLink]="['/distribuidores/relacionpedidos/']">Relación de Pedidos</a>
+          <a mat-list-item [routerLink]="['/distribuidores/estadocuenta/']">Estado de Cuenta</a>
+          <a mat-list-item [routerLink]="['/distribuidores/ventasclientearticulo/']">Ventas por Cliente y Artículo</a>
+          <a mat-list-item href="http://www.catalogofonelli.com.mx/" target="_blank">Catálogo de Joyería</a>
+        </mat-nav-list>
+      </mat-sidenav>
+  
+  
+      
+      <section >
+        <div class="row">
+          <div class="col-lg-12">
+  
+            <div class="card">
+              <div class="card-body">
+                <h2 class="card-title" >Ventas por cliente y artículo</h2>
+  
+                <!-- General Form Elements -->
+                <form>
+                  <div class="form-row">                   
+
+                    <div class="col-md-1 col-md-1">
+                      <br>
+                      <br>
+                      <label for="inputPassword4">Desde</label>
+                    </div>
+
+                        <div class="form-group col-md-1">
+                          <label for="inputEmail4">Oficina</label>
+                          <input type="email" class="form-control" id="inputEmail4" placeholder="">
+                        </div>
+                        <div class="form-group col-md-2">
+                          <label for="inputPassword4">Fecha</label>
+                          <input type="date" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-2">
+                          <label for="inputPassword4">Num</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-1">
+                          <label for="inputPassword4">Fil</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-1">
+                          <label for="inputPassword4">Línea</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-2">
+                          <label for="inputPassword4">Clave</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-1">
+                          <label for="inputPassword4">Categoria</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                        <div class="form-group col-md-1">
+                          <label for="inputPassword4">SubCategoria</label>
+                          <input type="text" class="form-control" id="inputPassword" placeholder="">
+                        </div>
+                    </div>
+
+                    <div class="form-row">                   
+                     
+                      <div class="col-md-1">                        
+                        <label for="inputPassword4">Hasta</label>
+                      </div>
+
+                      <div class="form-group col-md-1">
+                        <input type="email" class="form-control" id="inputEmail4" placeholder="">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <input type="date" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-1">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-1">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-1">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                      <div class="form-group col-md-1">
+                        <input type="text" class="form-control" id="inputPassword" placeholder="">
+                      </div>
+                  </div>
+  
+                  <!-- control de radios -->
+                  <div class="row">
+                     
+                    <div class="form-group col-md-3">
+                      <div class="form-check" >
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                        <label class="form-check-label" for="gridRadios1"> Línea</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                        <label class="form-check-label" for="gridRadios2">Especiales</label>
+                      </div>
+                      <div class="form-check">
+                        <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                        <label class="form-check-label" for="gridRadios3"> Todos </label>
+                      </div>
+                    </div>
+
+                    <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                          <label class="form-check-label" for="gridRadios1"> Internos</label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                          <label class="form-check-label" for="gridRadios2"> Externos </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3" >
+                          <label class="form-check-label" for="gridRadios3"> Todos </label>
+                        </div>
+                      </div>
+
+                      <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
+                          <label class="form-check-label" for="gridRadios1"> Categoria </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                          <label class="form-check-label" for="gridRadios2"> Piezas </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios3" value="option3">
+                          <label class="form-check-label" for="gridRadios3"> Importe </label>
+                        </div>
+                      </div>
+
+                      <div class="form-group col-md-3">
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" >
+                          <label class="form-check-label" for="gridRadios1"> Detallado </label>
+                        </div>
+                        <div class="form-check">
+                          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" checked>
+                          <label class="form-check-label" for="gridRadios2"> Resumido </label>
+                        </div>
+                        
+                      </div>
+
+                    
+                  </div>
+  
+  
+                   
+  
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <button type="submit" class="btn btn-primary">BUSCAR</button>
+                        </div>
+                    </div>            
+  
+  
+                  
+  
+                  
+                </form><!-- End General Form Elements --> 
+              </div> 
+            </div>
+          </div>
+        </div>
+      </section>
+  
+  
+      
+    </mat-sidenav-container>
+  </div>
+  
+  <div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
+  
+  
+  
+  
+  
+  <!-- Copyright 2022 Google LLC. All Rights Reserved.
+      Use of this source code is governed by an MIT-style license that
+      can be found in the LICENSE file at https://angular.io/license -->
